--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,21 +9,21 @@
   --font-weight-normal: 400;
   --font-weight-bold: 600;
   --headings-weight: 600;
-  --red: #ee8695;
-  --white: #fbbbad;
+  --red: #d17c7c;
+  --white: #f6c6a8;
   --black: #000000;
-  --lblue: #4a7a96;
-  --blue: #333f58;
-  --gray-1: #343435;
-  --gray-2: #6D6E6F;
-  --dblue: #292831;
-  --lighter: #F3F3F3;
-  --color: #FF5151;
+  --dblue: #46425e;
+  --blue: #d17c7c;
+  --gray-1: #f6c6a8;
+  --gray-2: #f6c6a8;
+  --lblue: #5b768d;
+  --lighter: #f6c6a8;
+  --color: #f6c6a8;
   --color-rgb: 255,81,81;
-  --text-color: #fbbbad;
-  --headings-color: #fbbbad;
-  --link-color: #ee8695;
-  --link-color-hover: #fbbbad;
+  --text-color: #f6c6a8;
+  --headings-color: #f6c6a8;
+  --link-color: #f6c6a8;
+  --link-color-hover: #d17c7c;
 }
 @media all and (min-width: 56.25em) {
   :root {
@@ -110,12 +110,12 @@ textarea {
 
 ::-moz-selection {
   background: var(--color);
-  color: var(--white);
+  color: var(--lighter);
 }
 
 ::selection {
   background: var(--color);
-  color: var(--white);
+  color: var(--lighter);
 }
 
 html {
@@ -143,8 +143,6 @@ html.no-scroll {
 }
 
 body {
-
-  background-image: url("https://www.transparenttextures.com/patterns/ice-age.png");
   background: var(--blue);
   color: var(--text-color);
   font-family: var(--body-font);
@@ -157,20 +155,20 @@ body {
 }
 
 a {
-  color: var(--link-color);
+  color: var(--link-color-hover);
   text-decoration: none;
   -webkit-transition: all 0.12s linear;
   -o-transition: all 0.12s linear;
   transition: all 0.12s linear;
 }
 a:hover {
-  color: var(--link-color-hover);
+  color: var(--link-color);
 }
 a:active {
-  color: var(--link-color-hover);
+  color: var(--link-color);
 }
 a:focus {
-  color: var(--link-color-hover);
+  color: var(--link-color);
   outline: none;
 }
 
@@ -185,7 +183,7 @@ a:focus {
   color: var(--red);
 }
 .invert:active {
-  color: var(--link-color);
+  color: var(--dblue);
 }
 .invert:focus {
   color: var(--link-color);
@@ -456,7 +454,7 @@ figcaption {
 kbd {
   background: var(--dark);
   border-radius: 2px;
-  color: var(--white);
+  color: var(--lighter);
   font-family: var(--monospace);
   font-size: 0.8888em;
   padding: 0.125rem 0.375rem;
@@ -523,7 +521,7 @@ button {
           box-shadow: 0px 8px 32px rgba(var(--color-rgb), 0.4);
   border: none;
   border-radius: 4px;
-  color: white;
+  color: var(--lighter);
   cursor: pointer;
   display: inline-block;
   font: var(--headings-weight) 0.7023319616rem var(--heading-font);
@@ -550,7 +548,7 @@ button {
 button:hover, .btn:focus, [type=button]:focus,
 [type=submit]:focus,
 button:focus {
-  color: white;
+  color: var(--lighter);
   text-decoration: none;
   -webkit-transform: translateY(-3px);
       -ms-transform: translateY(-3px);
@@ -627,7 +625,7 @@ option {
 [type=search],
 textarea,
 select {
-  background-color: var(--white);
+  background-color: var(--lighter);
   border: none;
   border: 1px solid var(--light);
   border-radius: 4px;
@@ -677,7 +675,7 @@ input[type=radio] + label {
 }
 input[type=checkbox] + label::before,
 input[type=radio] + label::before {
-  background-color: var(--white);
+  background-color: var(--lighter);
   border: 1px solid var(--light);
   border-radius: 2px;
   content: "";
@@ -913,7 +911,7 @@ textarea {
   width: auto !important;
 }
 .search__overlay {
-  background-color: var(--white);
+  background-color: var(--lighter);
   -webkit-box-shadow: 1px 0 18px rgba(0, 0, 0, 0.12);
           box-shadow: 1px 0 18px rgba(0, 0, 0, 0.12);
   border-radius: var(--border-radius);
@@ -1006,7 +1004,7 @@ textarea {
 }
 .navbar .navbar__menu li a,
 .navbar .navbar__menu li span[aria-haspopup=true] {
-  color: var(--dark);
+  color: var(--white);
   display: block;
   padding: 0 0.75rem;
   -webkit-transition: all 0.24s ease-out;
@@ -1017,10 +1015,10 @@ textarea {
 .navbar .navbar__menu li span[aria-haspopup=true]:active,
 .navbar .navbar__menu li span[aria-haspopup=true]:focus,
 .navbar .navbar__menu li span[aria-haspopup=true]:hover {
-  color: var(--color);
+  color: var(--red);
 }
 .navbar .navbar__menu li span {
-  color: var(--dark);
+  color: var(--white);
   cursor: default;
   display: block;
   padding: 0 0.5rem;
@@ -1028,10 +1026,10 @@ textarea {
 .navbar .navbar__menu > li.active a,
 .navbar .navbar__menu > li.active span, .navbar .navbar__menu > li.active-parent a,
 .navbar .navbar__menu > li.active-parent span {
-  color: var(--color);
+  color: var(--red);
 }
 .navbar .navbar__menu > li:hover > a, .navbar .navbar__menu > li:hover > span[aria-haspopup=true] {
-  color: var(--color);
+  color: var(--red);
 }
 .navbar .has-submenu:active > .navbar__submenu,
 .navbar .has-submenu:focus > .navbar__submenu,
@@ -1111,7 +1109,7 @@ textarea {
 }
 .navbar .navbar__submenu li a,
 .navbar .navbar__submenu li span[aria-haspopup=true] {
-  color: var(--white) !important;
+  color: var(--lighter) !important;
   padding: 0.5rem 1rem;
   -webkit-transition: all 0.24s ease;
   -o-transition: all 0.24s ease;
@@ -1123,14 +1121,14 @@ textarea {
 .navbar .navbar__submenu li span[aria-haspopup=true]:hover {
   background: rgba(255, 255, 255, 0.15);
   border-radius: 4px;
-  color: var(--white) !important;
+  color: var(--lighter) !important;
 }
 .navbar .navbar__submenu li span {
-  color: var(--white) !important;
+  color: var(--lighter) !important;
   padding: 0.5rem 1.25rem;
 }
 .navbar .navbar__submenu li:hover > a, .navbar .navbar__submenu li:hover > span[aria-haspopup=true] {
-  color: var(--white) !important;
+  color: var(--lighter) !important;
 }
 .navbar .navbar__toggle {
   background: none;
@@ -1246,7 +1244,7 @@ textarea {
 }
 
 .navbar_mobile_overlay {
-  background: var(--white);
+  background: vvar(--lighter);
   height: calc(100vh - 4rem);
   left: 0;
   opacity: 1;
@@ -1323,7 +1321,7 @@ textarea {
 }
 
 .navbar_mobile_sidebar {
-  background: var(--white);
+  background: var(--lighter);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
   height: 100vh;
@@ -1539,7 +1537,7 @@ textarea {
   width: 80%;
 }
 .l-grid--5 .c-card:nth-child(9n-4) .c-card__wrapper * {
-  color: white;
+  color: var(--lighter);
 }
 .l-grid--5 .c-card:nth-child(9n-4) .c-card__wrapper h2 {
   font-size: 1.423828125rem;
@@ -1608,7 +1606,7 @@ textarea {
   width: 80%;
 }
 .l-grid--6 .c-card:nth-child(2) .c-card__wrapper * {
-  color: white;
+  color: var(--lighter);
 }
 .l-grid--6 .c-card:nth-child(2) .c-card__wrapper h2 {
   font-size: 1.423828125rem;
@@ -1739,7 +1737,7 @@ textarea {
   font-size: 0.7901234568rem;
 }
 .c-card__title {
-  font-color: var(--white);
+  font-color: var(--lighter);
   font-size: 1rem;
   margin: 0.25rem 0 0.5rem;
 }
@@ -1748,7 +1746,7 @@ textarea {
   font-size: 0.7901234568rem;
 }
 .c-card__meta {
-  color: var(--white);
+  color: var(--lighter);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1973,7 +1971,7 @@ textarea {
 }
 .post__tag li > a:hover {
   background: var(--dark);
-  color: var(--white);
+  color: var(--lighter);
 }
 .post__share {
   -ms-flex-negative: 1;
@@ -2004,7 +2002,7 @@ textarea {
   margin: calc(2rem + 1vw) 0 0;
 }
 .post__nav__link {
-  color: var(--white) !important;
+  color: var(--lighter) !important;
   display: block;
   font-size: 0.624295077rem;
   text-transform: uppercase;
@@ -2363,7 +2361,7 @@ textarea {
 }
 .gallery__item figcaption {
   bottom: 1.2rem;
-  color: var(--white);
+  color: var(--lighter);
   left: 50%;
   opacity: 0;
   position: absolute;
@@ -2383,13 +2381,13 @@ textarea {
 }
 
 .pswp--dark .pswp__bg {
-  background: black;
+  background: var(--dblue);
 }
 .pswp--light .pswp__bg {
-  background: var(--white);
+  background: var(--lighter);
 }
 .pswp--light .pswp__counter {
-  color: black;
+  color: var(--dblue);
 }
 .pswp--light .pswp__caption__center {
   color: var(--dark);
